--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>title</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -93,7 +93,7 @@
           </div>
         </nav>
 
-        <div class="bg__element"></div>
+        <div class="bg__elem bg__element"></div>
 
         <main class="main">
           <section id="hero" class="hero scroll-to">
@@ -220,8 +220,8 @@
               />
             </picture>
           </section>
-          <div class="bg__element__300" data-aos="fade-in"></div>
-          <div class="bg__element__1" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__300" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__1" data-aos="fade-in"></div>
           <!-- ----------------------- ABOUT----------------------------------- -->
           <section class="about container" data-aos="fade-in">
             <div class="about__item">
@@ -243,7 +243,7 @@
               <div class="about__text">2022 года</div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- -------------------device------------------------------------------------ -->
 
@@ -368,7 +368,7 @@
             </div>
           </section>
 
-          <div class="bg__element__2" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__2" data-aos="fade-in"></div>
           <!-- ----------------  first video -------------------------------------- -->
 
           <section
@@ -434,7 +434,7 @@
               </div>
             </a>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ------------------------------tech------------------------------------------- -->
           <section id="tech" class="tech container" data-aos="fade-in">
@@ -528,7 +528,7 @@
               />
             </div>
           </section>
-          <div class="bg__element__3" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__3" data-aos="fade-in"></div>
           <!-- -------------------------- antenna-------------------------------------------- -->
           <section id="antenna" class="antenna container" data-aos="fade-in">
             <div class="antenna__items">
@@ -613,7 +613,7 @@
             </picture>
           </section>
 
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- -------------------------camers ----------------------- -->
           <section id="camers" class="camers container" data-aos="fade-in">
@@ -876,41 +876,41 @@
             </picture>
           </section>
 
-          <div class="bg__element__4" data-aos="fade-in"></div>
-          <div class="bg__element__5" data-aos="fade-in"></div>
-          <div class="bg__element__6" data-aos="fade-in"></div>
-          <div class="bg__element__7" data-aos="fade-in"></div>
-          <div class="bg__element__8" data-aos="fade-in"></div>
-          <div class="bg__element__9" data-aos="fade-in"></div>
-          <div class="bg__element__11" data-aos="fade-in"></div>
-          <div class="bg__element__12" data-aos="fade-in"></div>
-          <div class="bg__element__13" data-aos="fade-in"></div>
-          <div class="bg__element__14" data-aos="fade-in"></div>
-          <div class="bg__element__15" data-aos="fade-in"></div>
-          <div class="bg__element__16" data-aos="fade-in"></div>
-          <div class="bg__element__17" data-aos="fade-in"></div>
-          <div class="bg__element__18" data-aos="fade-in"></div>
-          <div class="bg__element__19" data-aos="fade-in"></div>
-          <div class="bg__element__20" data-aos="fade-in"></div>
-          <div class="bg__element__21" data-aos="fade-in"></div>
-          <div class="bg__element__22" data-aos="fade-in"></div>
-          <div class="bg__element__23" data-aos="fade-in"></div>
-          <div class="bg__element__24" data-aos="fade-in"></div>
-          <div class="bg__element__25" data-aos="fade-in"></div>
-          <div class="bg__element__26" data-aos="fade-in"></div>
-          <div class="bg__element__27" data-aos="fade-in"></div>
-          <div class="bg__element__28" data-aos="fade-in"></div>
-          <div class="bg__element__29" data-aos="fade-in"></div>
-          <div class="bg__element__30" data-aos="fade-in"></div>
-          <div class="bg__element__31" data-aos="fade-in"></div>
-          <div class="bg__element__32" data-aos="fade-in"></div>
-          <div class="bg__element__33" data-aos="fade-in"></div>
-          <div class="bg__element__34" data-aos="fade-in"></div>
-          <div class="bg__element__35" data-aos="fade-in"></div>
-          <div class="bg__element__36" data-aos="fade-in"></div>
-          <div class="bg__element__37" data-aos="fade-in"></div>
-          <div class="bg__element__38" data-aos="fade-in"></div>
-          <div class="bg__element__39" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__4" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__5" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__6" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__7" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__8" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__9" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__11" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__12" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__13" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__14" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__15" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__16" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__17" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__18" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__19" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__20" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__21" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__22" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__23" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__24" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__25" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__26" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__27" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__28" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__29" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__30" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__31" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__32" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__33" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__34" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__35" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__36" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__37" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__38" data-aos="fade-in"></div>
+          <div class="bg__elem bg__element__39" data-aos="fade-in"></div>
 
           <!-- ---------------------- sensor ------------------------ -->
 
@@ -942,7 +942,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ------------------- mode-------------------------- -->
 
@@ -2778,9 +2778,9 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- --------------------- notification -------------------------- -->
-          <div class="bg__element-lines"></div>
+          <div class="bg__elem bg__element-lines"></div>
           <section
             id="notification"
             class="notification scroll-to"
@@ -2870,7 +2870,7 @@
               </picture>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- ------------------ fines  -------------------------- -->
           <section id="fines" class="fines" data-aos="fade-in">
             <div class="container">
@@ -2945,7 +2945,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- -------------------- form ---------------------------------- -->
           <section id="form" class="form container" data-aos="fade-in">
             <div class="form__left" data-aos="fade-in">
@@ -3034,7 +3034,7 @@
               />
             </picture>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- -------------------------- alert------------------------------- -->
           <section id="alert" class="alert container" data-aos="fade-in">
@@ -3728,7 +3728,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ----------------------- cold start ---------------------- -->
           <section
@@ -3849,7 +3849,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- ------------------- radar---------------------------- -->
 
           <section
@@ -3975,7 +3975,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ---------------  interface -------------------------- -->
           <section
@@ -4118,7 +4118,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- ---------------------- screen ------------------------------- -->
 
           <section id="screen" class="screen container" data-aos="fade-in">
@@ -4240,7 +4240,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ------------------- form----------------------------------- -->
           <section id="form2" class="form" data-aos="fade-in">
@@ -4342,7 +4342,7 @@
             />
           </picture> -->
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- --------------------- quality -------------------------- -->
           <section id="quality" class="quality container">
@@ -4515,7 +4515,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ----------------------- filter--------------------------- -->
           <section id="filter" class="filter">
@@ -4588,7 +4588,7 @@
             </div>
           </section>
 
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- -------------------shooting-------------------------------- -->
 
@@ -4878,7 +4878,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- --------------------170deg------------------------------- -->
 
@@ -4895,7 +4895,7 @@
               <img class="deg__img" src="./img/deg/deg.png" alt="deg" />
             </picture>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- --------------------------- possibilities ------------------------------ -->
 
@@ -5033,7 +5033,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- --------------------- insurance------------------------------ -->
           <section id="insurance" class="insurance container">
@@ -5051,7 +5051,7 @@
               class="insurance__icon"
             />
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ------------------------- memory------------------------------------ -->
 
@@ -5286,7 +5286,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- -------------------- protection ---------------------- -->
 
@@ -5646,7 +5646,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ---------------------- durable ------------------------------- -->
 
@@ -5784,7 +5784,7 @@
               />
             </picture>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ---------------------design----------------------- -->
 
@@ -5877,7 +5877,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ----------------- fastening ------------------------- -->
           <section id="fastening" class="fastening container">
@@ -6004,7 +6004,7 @@
             </div>
             <div class="fastening__360">360&deg;</div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- --------------------- installation ----------------------- -->
           <section id="installation" class="installation container">
@@ -6063,7 +6063,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- ------------------------- update --------------------------------->
 
           <section id="update" class="update container">
@@ -6153,7 +6153,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ------------------------------equipment---------------------------------- -->
 
@@ -6241,7 +6241,7 @@
               <a href="#" class="promotion__button button">Купить со скидкой</a>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ------------------------  -additional---   ---------------------------------------------- -->
 
@@ -6442,7 +6442,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- --------------------------------question---------------------------- -->
 
@@ -6500,7 +6500,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ----------------------characteristics----------------------------- -->
 
@@ -6930,7 +6930,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ----------------------examination ---------------------------- -->
           <section id="examination" class="examination container">
@@ -7335,7 +7335,7 @@
               <a href="#" class="examination__button button">Оставить отзыв</a>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- -------------------------- payment------------------------------------- -->
           <div class="payment__top" data-aos="fade-in">
             <div class="pay answer__pay">
@@ -7544,7 +7544,7 @@
               </picture>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- --------------------------------- answerblock -------------------------------------------- -->
 
@@ -7883,7 +7883,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- ----------------------------- cartreader---------------------------------------- -->
           <section id="cartreader" class="cartreader container">
             <div class="cartreader__left">
@@ -7927,7 +7927,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- -------------------------  guarantee  ------------------------------------------ -->
           <section
             id="guarantee"
@@ -8078,7 +8078,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- ------------------------------ certificate ------------------------------------ -->
 
@@ -8214,7 +8214,7 @@
               />
             </picture>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
 
           <!-- -------------------------form 2------------------------------ -->
 
@@ -8363,7 +8363,7 @@
               </picture>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!-- -----------------------------SUPPORT---------------------------------------- -->
 
           <section id="support" class="support container" data-aos="fade-in">
@@ -8482,7 +8482,7 @@
               </div>
             </div>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
           <!------------------------------- purchase -----------------------------------  -->
           <section id="purchase" class="purchase container">
             <div class="purchase__title" data-aos="fade-in">
@@ -8536,7 +8536,7 @@
               />
             </picture>
           </section>
-          <div class="bg__element"></div>
+          <div class="bg__elem bg__element"></div>
         </main>
 
         <footer id="footer" class="footer">
