--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               </picture>
               <div class="reg__name">Onlooker R5 Combo</div>
             </div>
-            <picture>
+            <!-- <picture>
               <source srcset="./img/hero/lines-bg.webp" type="image/webp" />
               <img
                 class="hero__lines-img1"
@@ -218,7 +218,7 @@
                 src="./img/hero/lines-bg.png"
                 alt="Видеорегистратор"
               />
-            </picture>
+            </picture> -->
           </section>
           <div class="bg__elem bg__element__300" data-aos="fade-in"></div>
           <div class="bg__elem bg__element__1" data-aos="fade-in"></div>
@@ -593,7 +593,7 @@
               <img loading="lazy" src="./img/antenna/line.svg" alt="lines" />
             </div>
             <div class="antenna__bg"></div>
-            <picture>
+            <!-- <picture>
               <source
                 loading="lazy"
                 srcset="./img/antenna/bg.webp"
@@ -610,7 +610,7 @@
                 src="./img/antenna/bg.png"
                 alt="background"
               />
-            </picture>
+            </picture> -->
           </section>
 
           <div class="bg__elem bg__element"></div>
@@ -865,7 +865,7 @@
                 />
               </picture>
             </div>
-            <picture>
+            <!-- <picture>
               <source srcset="./img/camers/bg-line.webp" type="image/webp" />
               <source srcset="./img/camers/bg-line.png" type="image/png" />
               <img
@@ -873,7 +873,7 @@
                 src="./img/camers/bg-line.png"
                 alt="background"
               />
-            </picture>
+            </picture> -->
           </section>
 
           <div class="bg__elem bg__element__4" data-aos="fade-in"></div>
@@ -3044,7 +3044,8 @@
           <div class="bg__elem bg__element"></div>
 
           <!-- -------------------------- alert------------------------------- -->
-          <section id="alert" class="alert container" data-aos="fade-in">
+          <div class="alert__container">
+                      <section id="alert" class="alert container">
             <div class="alert__title">
               Базы камер постоянно обновляются, поэтому видеорегистратор
               оповестит Вас:
@@ -3114,7 +3115,7 @@
               />
             </div>
             <div class="alert__tabs" data-aos="fade-in">
-              <div class="alert__tab" data-aos="fade-in">
+              <div class="alert__tab active-tab" data-aos="fade-in">
                 <img
                   loading="lazy"
                   src="./img/alert/icon6.svg"
@@ -3735,6 +3736,7 @@
               </div>
             </div>
           </section>
+          </div>
           <div class="bg__elem bg__element"></div>
 
           <!-- ----------------------- cold start ---------------------- -->
